--- a/css/md.css
+++ b/css/md.css
@@ -11,6 +11,7 @@
 .md-loader a {
     color: var(--light-text-color);
     text-decoration: underline var(--pink) 2px;
+    text-decoration-thickness: 2px;
     text-underline-offset: 3px;
     transition: all 0.25s ease-in-out, color 0.5s ease-in-out;
     position: relative;
@@ -27,10 +28,30 @@
     font-weight: 600 !important;
 }
 .md-loader img {
-    width: 100%;
+    width: calc(100% - 20px);
+    max-width: 600px;
     height: auto;
     border-radius: 10px;
     box-shadow: 0 0 0.2rem var(--light-text-color);
+}
+p:has(>img) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 15px;
+    color: gray;
+}
+p:has(>img) > img {
+    margin: 10px;
+}
+p:has(>img) a {
+    color: gray !important;
+    text-decoration: underline solid gray 1px !important;
+    text-decoration-thickness: 1px !important;
+    font-weight: 500;
+}
+p:has(>img) a {
+    top:0px !important;
 }
 .md-loader :not(pre) > code {
     padding: 3px;
