--- a/css/renderer.css
+++ b/css/renderer.css
@@ -155,6 +155,7 @@ body, html {
     transition: all 0.1s ease-in-out;
     cursor: pointer;
     background-color: var(--light-banner-color);
+    width: -moz-fit-content;
     width: fit-content;
     text-decoration: none;
     text-underline-offset: 5px;
@@ -167,21 +168,25 @@ body, html {
 #index-list li:hover {
     background-color: var(--light-code-color);
     text-decoration: 2px solid underline var(--pink);
+    text-decoration-thickness: 2px;
 }
 
 .dark #index-list li:hover {
     background-color: var(--dark-code-color);
     text-decoration: 2px solid underline var(--dark-pink);
+    text-decoration-thickness: 2px;
 }
 
 #index-list li.active {
     background-color: var(--light-bg-color);
     text-decoration: 1px solid underline var(--dark-pink);
+    text-decoration-thickness: 1px;
 }
 
 .dark #index-list li.active {
     background-color: var(--dark-bg-color);
     text-decoration: 1px solid underline var(--pink);
+    text-decoration-thickness: 1px;
 }
 
 #toggle-index {
@@ -257,6 +262,8 @@ body, html {
     scale: 0.9;
 }
 
+
+/* Blockquote CSS */
 p:has(tip, dyk, note)::before {
     white-space: pre;
     font-weight: 900;
@@ -299,6 +306,10 @@ p:has(note) {
         width: calc(100% - 59px);
         margin-left: 59px;
     }
+
+    .content-container {
+        width: 90%;
+    }
     
     .index-container {
         position: fixed;
@@ -332,7 +343,7 @@ p:has(note) {
     }
 
     .md-loader {
-        font-size: 22px !important;
+        font-size: 18px !important;
     }
 
     .footer {
